RESOLVED FIXED155477
iOS: RTFD format is not available in the pasteboard after copy/cut
https://bugs.webkit.org/show_bug.cgi?id=155477
Summary iOS: RTFD format is not available in the pasteboard after copy/cut
Enrica Casucci
Reported 2016-03-14 17:21:50 PDT
We are using the incorrect UTType to write RTFD data to the pasteboard. rdar://problem/23500600
Attachments
Patch (24.73 KB, patch)
2016-03-14 17:28 PDT, Enrica Casucci
no flags
Patch2 (24.73 KB, patch)
2016-03-14 17:39 PDT, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2016-03-14 17:28:27 PDT
Enrica Casucci
Comment 2 2016-03-14 17:39:20 PDT
Enrica Casucci
Comment 3 2016-03-14 17:47:05 PDT
Committed revision 198179.
Csaba Osztrogonác
Comment 4 2016-03-17 06:14:51 PDT
(In reply to comment #3) > Committed revision 198179. It broke the Apple Mac cmake build: Cannot find source file: platform/mac/MIMETypeRegistryMac.mm
Csaba Osztrogonác
Comment 5 2016-03-17 06:19:09 PDT
Note You need to log in before you can comment on or make changes to this bug.